--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "@types/node": "^20.5.9"
+    "@types/chai-as-promised": "^7.1.6",
+    "@types/node": "^20.5.9",
+    "chai-as-promised": "^7.1.1",
+    "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.16",
     "@types/mocha": "^8.2.2",
     "chai": "^4.3.4",
     "mocha": "^8.3.2",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.2.3"
   }
 }
