--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A TypeScript Node.js console application",
   "main": "src/index.ts",
   "scripts": {
+    "start": "ts-node src/index.ts",
     "test": "mocha --require ts-node/register test/**/*.ts",
-    "start": "ts-node src/index.ts"
+    "test:coverage": "nyc yarn test"
   },
   "keywords": [
     "typescript",
@@ -25,7 +26,20 @@
     "@types/mocha": "^8.2.2",
     "chai": "^4.3.4",
     "mocha": "^8.3.2",
+    "nyc": "^15.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.2.3"
+  },
+  "nyc": {
+    "reporter": [
+      "lcov",
+      "text"
+    ],
+    "exclude": [
+      "src/utils/*.ts",
+      "test/**/*.ts",
+      "coverage/**"
+    ],
+    "all": true
   }
 }
